--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Small Group June17th</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Derrick This works </h1>
+<p>It's time </p>
+  <img src="http://codeskulptor-assets.commondatastorage.googleapis.com/assets_clock_background.png"/>
 
 </body>
 </html>
